assets/css/style.css
/* ... */
.button--outline {
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
    background-color: transparent;
}

.button--outline:hover,
.button.--current {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

.button.--current {
    cursor: default;
}

.gallery .button {
    width: auto;
}

.address,
.colophon {
    width: 100%;
    border-top: 1px solid var(--primary-color);
}

.address-wrapper {
    max-width: var(--max-width);
    padding: 4rem 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    margin: 0 auto;
}

.contact-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: .5rem;
}

.contact-list li {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    gap: .5rem;
}

.contact-list a {
    color: var(--primary-color);
    -webkit-transition: color 0.3s ease;
    -o-transition: color 0.3s ease;
    transition: color 0.3s ease;
}

.contact-list a:hover {
    color: var(--accent-color);
}

.contact-list svg {
    width: 16px;
    height: 16px;
    fill: var(--primary-color);
}

p.contact-item {
    text-align: end;
}

.colophon-wrapper {
    max-width: var(--max-width);
    padding: 1rem 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    margin: 0 auto;
}

.colophon-block {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    gap: 2rem;
}

.section-hero {
    height: var(--doc-height);
    background: var(--theme-cover) no-repeat center center/cover;
    background-attachment: fixed;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding-top: 0;
}

.section-list {
    list-style: inside;
}

.section-custom-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
}

.section-custom-list li {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    gap: 1rem;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.section-custom-list svg {
    width: 2rem;
    height: 2rem;
    stroke: var(--secondary-color);
    stroke-width: 1rem;
    stroke-linecap: round;
    stroke-linejoin: round;
    fill: none;
}

.section-custom-list div {
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
}

.section-grid {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 2rem 1fr 2rem 1fr 2rem 1fr 2rem 1fr 2rem 1fr;
    grid-template-columns: repeat(6, 1fr);
    gap: 2rem;
}

.section-background {
    padding: 5rem;
}

.section-grid figcaption {
    text-align: center;
}

.section-block {
    -ms-flex-item-align: start;
    -ms-grid-row-align: start;
    align-self: start;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    gap: 2rem;
}

.section-block .--text-title {
    text-align: center;
}

.section-col {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 2rem;
}

.section-col--right {
    padding-left: 2rem;
}

.section-col--left {
    padding-right: 2rem;
}

.banner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    gap: 2rem;
    padding-bottom: 2rem;
    text-align: center;
}

@media (max-width: 1200px) {
    .container {
        padding: 0 1.5rem;
    }

    .gallery {
        min-width: unset;
        max-width: 100%;
        -ms-grid-columns: 1fr 1fr;
        grid-template-columns: repeat(2, 1fr);
        padding: 0 1.5rem;
    }

    .menu,
    .address-wrapper,
    .colophon-wrapper {
        padding-left: 1.5rem;
        padding-right: 1.5rem;
    }

    .--text-heading {
        font-size: 3rem;
    }

    .nav {
        gap: 1.5rem;
    }
}
/* ... */

